--- a/1- Preprocessamento.ipynb
+++ b/1- Preprocessamento.ipynb
@@ -20,20 +20,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "DelYAveq8yuX"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import string\n",
-        "import spacy\n",
-        "import random\n",
-        "import seaborn as sns  \n",
-        "import numpy as np\n",
-        "import re\n",
-        "import os"
+        "from utils import preprocessamento"
       ]
     },
     {
@@ -63,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 3,
       "metadata": {
         "id": "jqsZesTIj1D1"
       },
@@ -79,6 +73,84 @@
       "source": [
         "df = pd.read_parquet('dataset/train.parquet')\n",
         "print(df.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>texto</th>\n",
+              "      <th>sentimento</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Os minions no @BlogFarofeiros. Ainda bem que n...</td>\n",
+              "      <td>positivo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Doria diz não ter preferência por oponente no ...</td>\n",
+              "      <td>neutro</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>@estervi50977812 @alicesaquino @RiverdaleBrasi...</td>\n",
+              "      <td>positivo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>@ourbookself Oi, Paloma :) Vamos ver o que aco...</td>\n",
+              "      <td>positivo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Escolha de Jair Ventura mostra busca do Corint...</td>\n",
+              "      <td>neutro</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                               texto sentimento\n",
+              "0  Os minions no @BlogFarofeiros. Ainda bem que n...   positivo\n",
+              "1  Doria diz não ter preferência por oponente no ...     neutro\n",
+              "2  @estervi50977812 @alicesaquino @RiverdaleBrasi...   positivo\n",
+              "3  @ourbookself Oi, Paloma :) Vamos ver o que aco...   positivo\n",
+              "4  Escolha de Jair Ventura mostra busca do Corint...     neutro"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.head()"
       ]
     },
     {
@@ -141,22 +213,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gOur6ftJnKuP",
-        "outputId": "fb38de43-d314-4526-e38e-b1f420bb4fe3"
-      },
-      "outputs": [],
-      "source": [
-        "pln = spacy.load('pt_core_news_sm')\n",
-        "stop_words = spacy.lang.pt.stop_words.STOP_WORDS"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 14,
       "metadata": {
         "colab": {
@@ -180,56 +236,6 @@
       ],
       "source": [
         "df['texto'][1]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QqMa61Qwnj4c",
-        "outputId": "3d3f5647-c764-46a1-c437-972c448c5fac"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{'seus', 'fazia', 'não', 'nuns', 'tivemos', 'todo', 'primeira', 'comprida', 'deste', 'toda', 'nas', 'então', 'foste', 'cá', 'esteve', 'usa', 'sois', 'quarta', 'devem', 'mas', 'zero', 'maior', 'muito', 'na', 'todas', 'valor', 'área', 'meu', 'vêm', 'segundo', 'sete', 'lado', 'mais', 'forma', 'adeus', 'umas', 'algumas', 'se', 'cento', 'outros', 'eu', 'vinda', 'ver', 'seu', 'ele', 'dezoito', 'você', 'dizem', 'quem', 'baixo', 'pegar', 'antes', 'sou', 'sempre', 'estar', 'dá', 'partir', 'no', 'certeza', 'debaixo', 'sétima', 'esta', 'tentei', 'sim', 'vão', 'desde', 'aquilo', 'vários', 'quarto', 'estará', 'estiveste', 'boa', 'lugar', 'vezes', 'porquanto', 'quê', 'obrigada', 'vai', 'ponto', 'tua', 'da', 'parece', 'nunca', 'duas', 'foram', 'apoio', 'poder', 'quinze', 'muitos', 'teus', 'mal', 'caminho', 'sétimo', 'tarde', 'três', 'fazemos', 'final', 'cima', 'vossas', 'és', 'às', 'catorze', 'novo', 'pelas', 'além', 'tempo', 'uns', 'conhecido', 'quer', 'desta', 'parte', 'em', 'vossa', 'do', 'esse', 'perto', 'pouca', 'era', 'esses', 'essas', 'terceira', 'breve', 'tendes', 'dos', 'neste', 'posição', 'os', 'enquanto', 'atrás', 'estiveram', 'meses', 'ir', 'povo', 'relação', 'dezasseis', 'favor', 'grupo', 'seria', 'nossas', 'quanto', 'fazeis', 'sua', 'tenho', 'qual', 'tanto', 'sexta', 'oitavo', 'estava', 'contra', 'porém', 'tentaram', 'iniciar', 'quatro', 'exemplo', 'qualquer', 'treze', 'máximo', 'sabe', 'nada', 'após', 'nível', 'fora', 'algo', 'portanto', 'demais', 'onde', 'podia', 'pouco', 'embora', 'quinto', 'é', 'número', 'fez', 'que', 'usar', 'depois', 'sem', 'estas', 'temos', 'apenas', 'fui', 'têm', 'por', 'ambas', 'aquela', 'cinco', 'eventual', 'aquelas', 'próprio', 'faço', 'mês', 'deverá', 'cada', 'pois', 'estive', 'tens', 'tente', 'te', 'pelos', 'todos', 'bastante', 'as', 'aí', 'vós', 'saber', 'cujo', 'quinta', 'vocês', 'suas', 'meus', 'naquela', 'sexto', 'desse', 'geral', 'doze', 'está', 'minha', 'fazer', 'posso', 'tentar', 'daquela', 'apontar', 'pelo', 'fazem', 'numa', 'tal', 'próxima', 'sistema', 'isso', 'porque', 'vindo', 'pela', 'naquele', 'nessa', 'tipo', 'daquele', 'num', 'fará', 'irá', 'vez', 'vossos', 'como', 'com', 'uma', 'estão', 'essa', 'questão', 'mesmo', 'só', 'faz', 'lhe', 'pode', 'local', 'tivestes', 'nesta', 'corrente', 'para', 'ambos', 'momento', 'teu', 'dizer', 'porquê', 'veja', 'pontos', 'alguns', 'diz', 'este', 'sobre', 'são', 'um', 'talvez', 'novos', 'acerca', 'fostes', 'lá', 'tive', 'estado', 'coisa', 'ou', 'através', 'ontem', 'dão', 'apoia', 'vinte', 'tais', 'ainda', 'tudo', 'comprido', 'maioria', 'dezassete', 'quieto', 'puderam', 'último', 'nossa', 'ter', 'diante', 'vais', 'fomos', 'estou', 'vem', 'meio', 'menos', 'inclusive', 'fazes', 'inicio', 'tuas', 'conhecida', 'quero', 'dessa', 'dezanove', 'tão', 'aqui', 'seis', 'minhas', 'quieta', 'onze', 'também', 'me', 'contudo', 'menor', 'foi', 'terceiro', 'nem', 'ora', 'ela', 'dentro', 'logo', 'somente', 'obrigado', 'dois', 'bom', 'aqueles', 'conselho', 'cuja', 'elas', 'poderá', 'segunda', 'dar', 'oitava', 'até', 'somos', 'nós', 'nossos', 'possivelmente', 'tem', 'nove', 'falta', 'próximo', 'ser', 'tanta', 'aos', 'estás', 'ali', 'das', 'pôde', 'longe', 'estivestes', 'põe', 'disso', 'estes', 'certamente', 'novas', 'possível', 'direita', 'des', 'ademais', 'agora', 'for', 'quais', 'podem', 'nesse', 'tu', 'custa', 'assim', 'primeiro', 'deve', 'cedo', 'bem', 'entre', 'querem', 'nosso', 'mil', 'quando', 'vens', 'à', 'outras', 'maiorias', 'tiveram', 'estivemos', 'sob', 'dez', 'tiveste', 'ligado', 'ao', 'de', 'já', 'vosso', 'nos', 'outra', 'fim', 'vos', 'eles', 'grandes', 'oito', 'grande', 'nova', 'sei', 'põem', 'teve', 'números', 'aquele', 'nenhuma', 'isto'}\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(stop_words)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "id": "n1lFJDhJnoth",
-        "outputId": "dec503ba-e51d-4a42-f31a-e6058012bdc4"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "string.punctuation"
       ]
     },
     {
@@ -373,64 +379,6 @@
         "texto = \"Hellooo, isso é muitooo legaaalll!!!\"\n",
         "texto = re.sub(r'(\\w)\\1(\\1+)', r'\\1', texto)\n",
         "print(texto)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {
-        "id": "rS9ldTSJnsMb"
-      },
-      "outputs": [],
-      "source": [
-        "def preprocessamento(texto):\n",
-        "  # Letras minúsculas\n",
-        "  texto = texto.lower()\n",
-        "\n",
-        "  # Nome do usuário\n",
-        "  texto = re.sub(r\"@[A-Za-z0-9$-_@.&+]+\", ' ', texto)\n",
-        "\n",
-        "  # URLs\n",
-        "  texto = re.sub(r\"https?://[A-Za-z0-9./]+\", ' ', texto)\n",
-        "  \n",
-        "  #Removendo todos os :d (sorriso) ou sorriso:p\n",
-        "  texto = texto.replace(':d','')\n",
-        "  texto = texto.replace(':p','')\n",
-        "\n",
-        "  #Removendo os digitos\n",
-        "  texto = re.sub(r'\\d+','',texto)\n",
-        "\n",
-        "  #Removendo caracteres repetidos 3 ou mais vezes\n",
-        "  texto = re.sub(r'(\\w)\\1(\\1+)',r'\\1',texto)\n",
-        "  \n",
-        "  # Espaços em branco\n",
-        "  texto = re.sub(r\" +\", ' ', texto)\n",
-        "  \n",
-        "  #Removendo os espaços do inicio e final de cada frase\n",
-        "  texto = texto.strip()\n",
-        "\n",
-        "  # Emoticons\n",
-        "  lista_emocoes = {':)': 'emocaopositiva',\n",
-        "                 ':d': 'emocaopositiva',\n",
-        "                 ':(': 'emocaonegativa',\n",
-        "                 ':|': 'emoçaoneutra',\n",
-        "                 ':/': 'emoçaoneutra'}\n",
-        "\n",
-        "  for emocao in lista_emocoes:\n",
-        "    texto = texto.replace(emocao, lista_emocoes[emocao])\n",
-        "\n",
-        "  # Lematização\n",
-        "  documento = pln(texto)\n",
-        "\n",
-        "  lista = []\n",
-        "  for token in documento:\n",
-        "    lista.append(token.lemma_)\n",
-        "\n",
-        "  # Stop words e pontuações\n",
-        "  lista = [palavra for palavra in lista if palavra not in stop_words and palavra not in string.punctuation]\n",
-        "  lista = ' '.join([str(elemento) for elemento in lista if not elemento.isdigit()])\n",
-        "\n",
-        "  return lista"
       ]
     },
     {
